@@ -30,140 +30,6 @@ using namespace std;
 
 #include "Misc/MiscFuncs.h"
 
-bool MiscFuncs::isRegFile(string chkpath)
-{
-    struct stat st;
-    if (!lstat(chkpath.c_str(), &st))
-        if (S_ISREG(st.st_mode))
-            return true;
-    return false;
-}
-
-
-bool MiscFuncs::isDirectory(string chkpath)
-{
-    struct stat st;
-    if (!lstat(chkpath.c_str(), &st))
-        if (S_ISDIR(st.st_mode))
-            return true;
-    return false;
-}
-
-
-bool MiscFuncs::isFifo(string chkpath)
-{
-    struct stat st;
-    if (!lstat(chkpath.c_str(), &st))
-        if (S_ISFIFO(st.st_mode))
-            return true;
-    return false;
-}
-
-
-float MiscFuncs::string2float(string str)
-{
-    istringstream machine(str);
-    float fval;
-    machine >> fval;
-    return fval;
-}
-
-int MiscFuncs::string2int(string str)
-{
-    istringstream machine(str);
-    int intval;
-    machine >> intval;
-    return intval;
-}
-
-// ensures MIDI compatible numbers without errors
-int MiscFuncs::string2int127(string str)
-{
-    istringstream machine(str);
-    int intval;
-    machine >> intval;
-    if (intval < 0)
-        intval = 0;
-    else if (intval > 127)
-        intval = 127;
-    return intval;
-}
-
-unsigned int MiscFuncs::string2uint(string str)
-{
-    istringstream machine(str);
-    unsigned int intval;
-    machine >> intval;
-    return intval;
-}
-
-// make a filename legal
-void MiscFuncs::legit_filename(string& fname)
-{
-    for (unsigned int i = 0; i < fname.size(); ++i)
-    {
-        char c = fname.at(i);
-        if (!((c >= '0' && c <= '9')
-              || (c >= 'A' && c <= 'Z')
-              || (c >= 'a' && c <= 'z')
-              || c == '-'
-              || c == ' '
-              || c == '.'))
-            fname.at(i) = '_';
-    }
-}
-
-
-// make a complete path extra legal
-void MiscFuncs::legit_pathname(string& fname)
-{
-    for (unsigned int i = 0; i < fname.size(); ++i)
-    {
-        char c = fname.at(i);
-        if (!((c >= '0' && c <= '9')
-              || (c >= 'A' && c <= 'Z')
-              || (c >= 'a' && c <= 'z')
-              || c == '-'
-              || c == '/'
-              || c == '.'))
-            fname.at(i) = '_';
-    }
-}
-
-
-// adds or replaces wrong extension with the right one.
-string MiscFuncs::setExtension(string fname, string ext)
-{
-    string tmp = fname.substr(0,fname.find('.'));
-    tmp += ('.' + ext);
-    return tmp;
-}
-
-
-// replace 'src' with a different one in the compilation directory
-string MiscFuncs::localPath(string leaf)
-{
-    char *tmpath;
-    tmpath = (char*) malloc(PATH_MAX);
-    getcwd (tmpath, PATH_MAX);
-    string path = (string) tmpath;
-    size_t found = path.rfind("/src");
-    if (found != string::npos)
-        path.replace (found,4,leaf);
-    else
-        path = "";
-    free(tmpath);
-    return path;
-}
-
-
-void invSignal(float *sig, size_t len)
-{
-    for(size_t i = 0; i < len; ++i)
-        sig[i] *= -1.0f;
-}
-
-
 string MiscFuncs::asString(int n)
 {
    ostringstream oss;
@@ -253,36 +119,134 @@ string MiscFuncs::asHexString(unsigned int x)
 }
 
 
-unsigned int MiscFuncs::bitFindHigh(unsigned int value)
+float MiscFuncs::string2float(string str)
 {
-    unsigned int bit = 0;
-    while (value >>= 1)
-    {
-        bit ++;
-    }
-    return bit;
+    istringstream machine(str);
+    float fval;
+    machine >> fval;
+    return fval;
 }
 
 
-void MiscFuncs::bitSet(unsigned int& value, unsigned int bit)
+int MiscFuncs::string2int(string str)
 {
-    value |= (1 << bit);
+    istringstream machine(str);
+    int intval;
+    machine >> intval;
+    return intval;
 }
 
 
-void MiscFuncs::bitClear(unsigned int& value, unsigned int bit)
+// ensures MIDI compatible numbers without errors
+int MiscFuncs::string2int127(string str)
 {
-    unsigned int mask = -1;
-    mask ^= (1 << bit);
-    value &= mask;
+    istringstream machine(str);
+    int intval;
+    machine >> intval;
+    if (intval < 0)
+        intval = 0;
+    else if (intval > 127)
+        intval = 127;
+    return intval;
 }
 
 
-bool MiscFuncs::bitTest(unsigned int value, unsigned int bit)
+unsigned int MiscFuncs::string2uint(string str)
 {
-    if (value & (1 << bit))
-        return true;
+    istringstream machine(str);
+    unsigned int intval;
+    machine >> intval;
+    return intval;
+}
+
+
+bool MiscFuncs::isRegFile(string chkpath)
+{
+    struct stat st;
+    if (!lstat(chkpath.c_str(), &st))
+        if (S_ISREG(st.st_mode))
+            return true;
     return false;
+}
+
+
+bool MiscFuncs::isDirectory(string chkpath)
+{
+    struct stat st;
+    if (!lstat(chkpath.c_str(), &st))
+        if (S_ISDIR(st.st_mode))
+            return true;
+    return false;
+}
+
+
+bool MiscFuncs::isFifo(string chkpath)
+{
+    struct stat st;
+    if (!lstat(chkpath.c_str(), &st))
+        if (S_ISFIFO(st.st_mode))
+            return true;
+    return false;
+}
+
+
+// make a filename legal
+void MiscFuncs::legit_filename(string& fname)
+{
+    for (unsigned int i = 0; i < fname.size(); ++i)
+    {
+        char c = fname.at(i);
+        if (!((c >= '0' && c <= '9')
+              || (c >= 'A' && c <= 'Z')
+              || (c >= 'a' && c <= 'z')
+              || c == '-'
+              || c == ' '
+              || c == '.'))
+            fname.at(i) = '_';
+    }
+}
+
+
+// make a complete path extra legal
+void MiscFuncs::legit_pathname(string& fname)
+{
+    for (unsigned int i = 0; i < fname.size(); ++i)
+    {
+        char c = fname.at(i);
+        if (!((c >= '0' && c <= '9')
+              || (c >= 'A' && c <= 'Z')
+              || (c >= 'a' && c <= 'z')
+              || c == '-'
+              || c == '/'
+              || c == '.'))
+            fname.at(i) = '_';
+    }
+}
+
+
+// adds or replaces wrong extension with the right one.
+string MiscFuncs::setExtension(string fname, string ext)
+{
+    string tmp = fname.substr(0,fname.find('.'));
+    tmp += ('.' + ext);
+    return tmp;
+}
+
+
+// replace 'src' with a different one in the compilation directory
+string MiscFuncs::localPath(string leaf)
+{
+    char *tmpath;
+    tmpath = (char*) malloc(PATH_MAX);
+    getcwd (tmpath, PATH_MAX);
+    string path = (string) tmpath;
+    size_t found = path.rfind("/src");
+    if (found != string::npos)
+        path.replace (found,4,leaf);
+    else
+        path = "";
+    free(tmpath);
+    return path;
 }
 
 
@@ -326,4 +290,61 @@ bool MiscFuncs::matchnMove(int num , char *&pnt, const char *word)
  if (found)
      pnt = skipChars(pnt);
  return found;
+}
+
+
+// no more than 32 bit please!
+unsigned int MiscFuncs::nearestPowerOf2(unsigned int x, unsigned int min, unsigned int max)
+{
+    if (x <= min)
+        return min;
+    if (x >= max)
+        return max;
+    --x;
+    x |= x >> 1;
+    x |= x >> 2;
+    x |= x >> 4;
+    x |= x >> 8;
+    x |= x >> 16;
+    return ++x;
+}
+
+
+unsigned int MiscFuncs::bitFindHigh(unsigned int value)
+{
+    unsigned int bit = 0;
+    while (value >>= 1)
+    {
+        bit ++;
+    }
+    return bit;
+}
+
+
+void MiscFuncs::bitSet(unsigned int& value, unsigned int bit)
+{
+    value |= (1 << bit);
+}
+
+
+void MiscFuncs::bitClear(unsigned int& value, unsigned int bit)
+{
+    unsigned int mask = -1;
+    mask ^= (1 << bit);
+    value &= mask;
+}
+
+
+bool MiscFuncs::bitTest(unsigned int value, unsigned int bit)
+{
+    if (value & (1 << bit))
+        return true;
+    return false;
+}
+
+
+void invSignal(float *sig, size_t len)
+{
+    for(size_t i = 0; i < len; ++i)
+        sig[i] *= -1.0f;
 }
